# minsite

./: .gitmodules  Cargo.toml  render-images.sh  style.css
.github/workflows/: deploy.yaml
content/: mandelbrot.md
src/: main.rs
static/mandelbrot-gallery/configs/: blind_spot.toml  cell.toml  chain_of_minibrots.toml  clover.toml  diamond.toml  double_spiral.toml  fidget_spinner.toml  lattice.toml  minbrot_sun_disk.toml  minibrot_on_a_cross.toml  minibrot_with_dust_and_lightning.toml  minibrot_with_four_lightning_bolts.toml  nested_circles.toml  octopus.toml  parade_of_elephants.toml  seahorse_parade.toml
