[package]
name = "minsite"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["fract"]

[dependencies]
comrak = "0.50"
copy_dir = "0.1.3"
image = { version = "0.25.9", default-features = false, features = [
	"rayon",
	"png",
	"webp",
] }
katex = "0.4.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
syntect = "5.2"
urlencoding = "2.1.3"
